add binary tree

--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
   </head>
   <body>
     <div class="graph">
-
     </div>
-    <script src="d3.js" charset="utf-8"></script>
 
+    <!--   for binary tree -->
+    <div id="chart">
+      <svg></svg>
+    </div>
+
+    <button class="regenerate">Regenerate</button>
+
+     <!--  various D3 incarnations -->
+
+    <script src="d3.js" charset="utf-8"></script>
+    <script src='binary_tree.js'></script>
     <script src='general_update_pattern_1.js'></script>
     <script src='dataSets.js'></script>
     <script src='graphs.js'></script>
