learn more about svgs

--- a/index.html
+++ b/index.html
@@ -2,24 +2,31 @@
 <html>
   <head>
     <link rel='stylesheet' type='css' href='styles.css'>
+    <script src="d3.js" charset="utf-8"></script>
   </head>
   <body>
-    <div class="graph">
+  <!--   <div class="graph">
     </div>
 
-    <!--   for binary tree -->
+      for binary tree
     <div id="chart">
       <svg></svg>
-    </div>
+    </div> -->
 
-    <button class="regenerate">Regenerate</button>
+    <!-- <button class="regenerate">Regenerate</button> -->
 
      <!--  various D3 incarnations -->
 
-    <script src="d3.js" charset="utf-8"></script>
+    <!-- <div class="bar"></div> -->
+
+    <script>
+    </script>
+
+    <script src='bar_chart_svg.js'></script>
     <script src='binary_tree.js'></script>
     <script src='general_update_pattern_1.js'></script>
     <script src='dataSets.js'></script>
     <script src='graphs.js'></script>
+
   </body>
 </html>
