add scatter plot svg

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <script>
     </script>
 
-    <script src='bar_chart_svg.js'></script>
+    <script src='scatter_plot_svg.js'></script>
+    <!-- // <script src='bar_chart_svg.js'></script> -->
     <script src='binary_tree.js'></script>
     <script src='general_update_pattern_1.js'></script>
     <script src='dataSets.js'></script>
